--- a/asteroids/index.html
+++ b/asteroids/index.html
@@ -8,6 +8,7 @@
   <body>
     <canvas id="canvas" width="300" height="300"></canvas>
 
+    <script type="text/javascript" src="./keymaster.js"></script>
     <script type="text/javascript" src="./bundle.js"></script>
   </body>
 </html>
